add more problem

--- a/index.html
+++ b/index.html
@@ -553,6 +553,47 @@
                 "문제링크" : "https://atcoder.jp/contests/agc043/tasks/agc043_a", 
                 "코드링크" : "https://atcoder.jp/contests/agc043/submissions/58516066",
                 "대표이미지" : "agc043_a.png"
+            },
+            {
+                "분류" : "DP",
+                "제목": "동전 분배",
+                "문제": "동전이 주어지고 주어진 동전을 적당히 나누어 정확히 금액을 반으로 나눌 수 있는 지 문제",
+                "해법" : "DP[i][K] = i 번째 동전까지 K 원을 만들 수 있는지 여부를 저장하는 배열로 정의하여 DP[N][총합의반] 을 출력하면 된다." +
+                "\n 약간의 트릭을사용하여 1차원 DP 로 처리할 수도 있다.",
+                "문제링크" : "https://www.acmicpc.net/problem/1943", 
+                "코드링크" : "https://www.acmicpc.net/source/85072021"
+            },
+            {
+                "분류" : "DP",
+                "제목": "양팔저울",
+                "문제": "N 개의추가 주어졌을때 새로운 추의 무게를 확인 할 수 있는지 판단하는 문제. 양팔저울이 평행이 되도록 적절히 추를 배치하면 " +
+                "\n 새로운 추의 무게가 측정 가능한지 판단할 수 있다." ,
+                "해법" : "DP[i][K] = i 번째 추 까지 고려했을때 만들 수 있는 무게 차이가 K 이면 1 로 정의 할 수 있다." +
+                "\n DP[i-1][k] 가 1일때 DP[i][X] 가 1이되는 조건은 3가지 이다. K, K+ms[i], abs(k-ms[i])" +
+                "\n i 번째 추를 놓지 않는경우, i번째 추를 무거운 쪽에 놓는경우, i 번재 추를 가벼운 쪽에 놓는 경우" + 
+                "\n DP[i-1] 와 별개로 i 번째 추만 한쪽에 올려놓는 경우가 있음.",
+                "문제링크" : "https://www.acmicpc.net/problem/2629", 
+                "코드링크" : "https://www.acmicpc.net/source/85093221"
+            },
+            {
+                "분류" : "DP",
+                "제목": "사탕가게",
+                "문제": "N 가지의 사탕별로 단가가 있고 주어진 예산으로 최대 칼로리를 구하는 문제, 종류별 사탕의 제한이 없다. ",
+                "해법" : "종류별 개수의 제한이 없을 경우에는 1차원 DP 로테이블을 만들 수 있다." +
+                "\n DP[k] 예산을 K 만큼 사용하였을때 최대 칼로리로 정의 한다." +
+                "\n 가능한 모든 i 와 k 에 대하여 DP[k] = max(DP[k], DP[k- i번째 사탕의 가격] + i번째 사탕의 칼로리) 로 업데이트 해 주면 된다", 
+                "문제링크" : "https://www.acmicpc.net/problem/4781", 
+                "코드링크" : "https://www.acmicpc.net/source/85099169"
+            },
+            {
+                "분류" : "DP",
+                "제목": "수강과목",
+                "문제": "전형적인냅색 문제 중요도를 최대화할 수있도록 시간을 분배하는 방법 찾기 ",
+                "해법" : "DP[i][k] : i 번째까지 고려하여 K 시간을 썼을 때 최대 중요도" +
+                "\n 모든K 에 대해서 DP[i][k] = max(DP[i-1][k], DP[i-1][k-W] + C) 로 계산하여 업데이트 하면된다." +
+                "\n DP[0] 을 dummy 로 define 하고 index 를 조절하면 좀더 간결하게 dp table 을업데이트 할 수 있다.",
+                "문제링크" : "https://www.acmicpc.net/problem/17845", 
+                "코드링크" : "https://www.acmicpc.net/source/85126535"
             }
         ];
 
