Add more problem

--- a/index.html
+++ b/index.html
@@ -594,6 +594,31 @@
                 "\n DP[0] 을 dummy 로 define 하고 index 를 조절하면 좀더 간결하게 dp table 을업데이트 할 수 있다.",
                 "문제링크" : "https://www.acmicpc.net/problem/17845", 
                 "코드링크" : "https://www.acmicpc.net/source/85126535"
+            },
+            {
+                "분류" : "union find",
+                "제목": "Sakurako, Kosuke, and the Permutation",
+                "문제": "N 개의 수열에서 F(A[i]) = i , F(F(A[i])) = 1 인 원소들로 구성된 수열을 만드는데 원소들끼리 swap 을 몇번해야 하는 지 찾는 문제" +
+                "\n 예를 들면 {5,4,3,2,1} 에서 F(1) = 5 , F(2) = 4 , F(3) = 3 , F[4] = 2 , F[5] = 1 이고 F(F(5)) = 5 .... F(F(1)) = 1 이므로 답은 0 이다." +
+                "\n {5,4,3,2,1} 같은 수열을 만들기 위해 원소를 몇번 swap 해야 하는지 찾아야 한다.",
+                "해법" : "모든원소들은 F(x) 를 몇번 합성하냐에 따라 방향 그래프로 표현할 수 있다. 각 그래프별 cycle 의 개수에 따라 (S-1)/2 만큼 swap 이 필요하다." +
+                "\n S는 cycle 의 크기이다.",
+                "문제링크" : "https://codeforces.com/contest/2033/problem/E", 
+                "코드링크" : "https://codeforces.com/contest/2033/submission/288058940",
+                "대표이미지" : "force_2033_E.png"
+            },
+            {
+                "분류" : "union find, 그리디, 그래프 이론",
+                "제목": "색깔 모으기",
+                "문제": "2개짜리 박스가 N 개 있고 빈 박스가 추가로 1개 있을때 주어진 조건에 따라 공을 이동시켜 모든 박스에 동일한 공으로 채울 수 있는지 판단하는 문제" +
+                "\n 채울 수 있으면 이동횟수를 , 그렇지 않으면 -1 을 출력해야 한다. 공을 빈곳으로 이동하거나 같은 번호로 이동할 수 있다.",
+                "해법" : "아래의 2 단계로 도출 할 수 있다." +
+                "\n 1) union find 등을 이용하여 서로 의존성이 없는 박스들끼리 모은다. 전체 답은 각 그룹들의 합으로 구성할 수 있다." +
+                "\n 2) 각 박스들의 위의 구슬 이 아래 구슬을 뻬는데 의존성이 있기 때문에 위의 구슬 -> 아래 구슬의 방향 그래프로 표현할 수 있다." +
+                "\n 방향그래프를 구성하는 노드들의 indegree 가 0 인게 2개 이상일 경우 결과를 만들 수 없다. 그리고 방향그래프의 노드 개수 + 1 이 이동횟수이다.",
+                "문제링크" : "https://www.acmicpc.net/problem/32070", 
+                "코드링크" : "https://www.acmicpc.net/source/86124674",
+                "대표이미지" : "bj_32070.png"
             }
         ];
 
