--- a/index.html
+++ b/index.html
@@ -619,6 +619,39 @@
                 "문제링크" : "https://www.acmicpc.net/problem/32070", 
                 "코드링크" : "https://www.acmicpc.net/source/86124674",
                 "대표이미지" : "bj_32070.png"
+            },
+            {
+                "분류" : "우선순위큐",
+                "제목": "트리뽑아내기",
+                "문제": "트리에서 정해진 조건으로 Root 를 뽑아낼때 뽑히는 노드 순서대로 출력하는 문제" +
+                "\n 루트를 뽑은 후 자식노드들 중 제일 작은 Node 가 Root 가 되고, leaf 노드까지 연쇄적으로 이동한다.",
+                "해법" : "관찰만 잘하면 구현은 간단한 문제" +
+                "\n 1) 우선 순위 큐를 이용하여 뽑을 대상이 되는 노드들을 잘 관리하고 매번 뽑을 때 마다 뽑은 노드의 자식들을 큐에 넣어 주면 된다",
+                "문제링크" : "https://www.acmicpc.net/problem/32072", 
+                "코드링크" : "https://www.acmicpc.net/source/86200470",
+                "대표이미지" : "bj_32072.png"
+            },
+            {
+                "분류" : "누적합, FanWickTree",
+                "제목": "Mod Sigma Problem",
+                "문제": "주여진 배열의 모든 부분 배열의 합의 Mod M 의 총합을 구하는 문제",
+                "해법" : "부분 배열의 합을 빠르게 계산히기 위해서는 먼저 누적합을 구해야 한다.",
+                "문제링크" : "https://atcoder.jp/contests/abc378/tasks/abc378_e", 
+                "코드링크" : "https://atcoder.jp/contests/abc378/submissions/59786682",
+            },
+            {
+                "분류" : "Greedy, Union Find",
+                "제목": "Sum of Max Matching",
+                "문제": "그래프가 주어지고 각 Edge 는 양 방향이며 고유의 weight 를 가지고 있다." +
+                "/n 노드 x,y 에대한 경로는 경로에 포함되는 Edge 들의 최대 weight 로 정의하며, F(x,y) 는 x 에서 y 로 가는 모든 경로중 최소값으로 정의한다." +
+                "/n K개의 노드 그룹이 주어지고 각 그룹의 노드들끼리 임의의 순서로 1:1 매칭하여 F(x,y) 의 합을 구할때 최소가 되는 합을 구해야 한다.",
+                "해법" : "1) 각 그룹의 index 별로 count 변수를 정의한다" +
+                "\n 2) 노드 개수만큼 unionFind 클래스를 생성한다." +
+                "\n 3) Edge 들을 weight 크기순으로 정렬하여 순회하여 Edge 에 연결된 node 들의 union 여부를 판단한다" +
+                "\n 4) 만약 union 이 아닌경우 두 Node 의 root 에 대한 A,B ground 의 최소값 만큼 ans 를 업데이트 해 준다" +
+                "\n 5) root node 에 A,B ground 의 최소값 만큼 차감한다." ,
+                "문제링크" : "https://atcoder.jp/contests/abc383/tasks/abc383_e", 
+                "코드링크" : "https://atcoder.jp/contests/abc383/submissions/60629616",
             }
         ];
 
