--- a/index.html
+++ b/index.html
@@ -824,7 +824,190 @@
                 "문제링크" : "https://atcoder.jp/contests/abc394/tasks/abc394_e", 
                 "코드링크" : "",
                 "기타" : "3/4 스터디 문제"
+            },
+            {
+                "분류" : "TBD",
+                "제목": "Alkane",
+                "문제": "TBD" ,
+                "해법" : "TBD",
+                "문제링크" : "https://atcoder.jp/contests/abc394/tasks/abc394_f", 
+                "코드링크" : "",
+                "기타" : "3/26 스터디 문제"
+            },
+            {
+                "분류" : "TBD",
+                "제목": "Haircut",
+                "문제": "TBD" ,
+                "해법" : "TBD",
+                "문제링크" : "https://www.acmicpc.net/problem/18874", 
+                "코드링크" : "",
+                "기타" : "3/26 스터디 문제"
+            },
+            {
+                "분류" : "TBD",
+                "제목": "Pigeon Swap",
+                "문제": "TBD" ,
+                "해법" : "TBD",
+                "문제링크" : "https://atcoder.jp/contests/abc395/tasks/abc395_d", 
+                "코드링크" : "",
+                "기타" : "3/26 스터디 문제"
+            },
+            {
+                "분류" : "TBD",
+                "제목": "둘이 한 팀",
+                "문제": "TBD" ,
+                "해법" : "TBD",
+                "문제링크" : "https://www.acmicpc.net/problem/33543", 
+                "코드링크" : "",
+                "기타" : "3/26 스터디 문제"
+            },
+            {
+                "분류" : "TBD",
+                "제목": "Maximize Subarrays After Removing One Conflicting Pair",
+                "문제": "TBD" ,
+                "해법" : "TBD",
+                "문제링크" : "https://leetcode.com/problems/maximize-subarrays-after-removing-one-conflicting-pair/description/", 
+                "코드링크" : "",
+                "기타" : "3/26 스터디 문제"
+            },
+            {
+                "분류" : "TBD",
+                "제목": "Maximize XOR",
+                "문제": "TBD" ,
+                "해법" : "TBD",
+                "문제링크" : "https://atcoder.jp/contests/abc386/tasks/abc386_e", 
+                "코드링크" : "",
+                "기타" : "3/26 스터디 문제"
+            },
+            {
+                "분류" : "TBD",
+                "제목": "Count Beautiful Numbers",
+                "문제": "TBD" ,
+                "해법" : "TBD",
+                "문제링크" : "https://leetcode.com/problems/count-beautiful-numbers/", 
+                "코드링크" : "",
+                "기타" : "4/9 스터디 문제"
+            },
+            {
+                "분류" : "TBD",
+                "제목": "Min of Restricted Sum",
+                "문제": "TBD" ,
+                "해법" : "TBD",
+                "문제링크" : "https://atcoder.jp/contests/abc396/tasks/abc396_e", 
+                "코드링크" : "",
+                "기타" : "4/9 스터디 문제"
+            },
+            {
+                "분류" : "TBD",
+                "제목": "Rotated Inversions",
+                "문제": "TBD" ,
+                "해법" : "TBD",
+                "문제링크" : "https://atcoder.jp/contests/abc396/tasks/abc396_f", 
+                "코드링크" : "",
+                "기타" : "4/9 스터디 문제"
+            },
+            {
+                "분류" : "TBD",
+                "제목": "Sum of All Substrings",
+                "문제": "TBD" ,
+                "해법" : "TBD",
+                "문제링크" : "https://atcoder.jp/contests/abc379/tasks/abc379_e", 
+                "코드링크" : "",
+                "기타" : "4/9 스터디 문제"
+            },
+            {
+                "분류" : "TBD",
+                "제목": "Candy Cane Feast",
+                "문제": "TBD" ,
+                "해법" : "TBD",
+                "문제링크" : "https://www.acmicpc.net/problem/31063", 
+                "코드링크" : "",
+                "기타" : "4/9 스터디 문제"
+            },
+            {
+                "분류" : "Greedy",
+                "제목": "Social Distancing I",
+                "문제": "마굿간에 소가 있는지 없는지 여부를 알려주는 1,0 기반의 스트링이 있을때 2마리를 더 추가하였을때 소들의 거리가 최소가 얼마인지 구하는 문제" ,
+                "해법" : "",
+                "문제링크" : "https://www.acmicpc.net/problem/18880", 
+                "코드링크" : "",
+                "기타" : "4/9 스터디 문제"
+            },
+            {
+                "분류" : "수학",
+                "제목": "Ringo's Favorite Numbers 3",
+                "문제": "주어진 숫자를 넘지않는 가장 큰 400 수를 찾는 문제. 400 수는 2개의 소수의 곱으로 이루어진 수 중에서 각 소수의 제곱 숫자가 짝수로 구성되어 있어야한다." ,
+
+                "해법" : "400 수는 각 제곱수가 짝수이므로 2개의 소수를 가지는 완전 제곱수를 의미함. ( P^a * Q^b )^2 으로표현할 수 있음." +
+                "\n 따라서 두개의 소수의 곱으로 구성된 모든 수를 구하여 제곱하면 조건을 만족하는 완전 제곱수를 구할 수 있고 upper bound 를 이용하여 넘지않는 가장 큰 소수를 구할 수 있다." +
+                "\n 소수의 개수를 가지는 벡터 테이블(v[]) 을 정의하고 2부터 순회하면서 v[i] = 0 인경우 i, i^2 , .... i^n 까지 v[i^x] 를 1씩 증가시켜주는 식으로 업데이트 하면 된다. ",
+                "문제링크" : "https://atcoder.jp/contests/abc400/tasks/abc400_e", 
+                "코드링크" : "https://atcoder.jp/contests/abc400/submissions/64679400"
+            },
+            {
+                "분류" : "Union Find",
+                "제목": "Reachable Set",
+                "문제": "그래프가 주어지고 1 부터 N 까지 1~i 까지만 순회가 가능하기 위해 노드를 몇개 삭제해야 하는지 계산하는 문제. 단 노드 삭제와 관계없이 순회가 안될경우 -1 을 출력한다." ,
+                "해법" : "union-find 데이터를 small, large 로 구성한다. small 은 i -> j edge 를 생각했을때 j 가 i 보다 작으면 small 에 에지를 추가하고, 반대의 경우 large 에  edge 를 추가한다." +
+                "\n 모든 i 에 대해 small 에서 i 와 연결된 노드의 개수가 i 와 다르다면 -1 , 그외에는 large 의 i 와연결된 노드들의 개수 에서 i 만큼 뻬면 나머지는 삭제해야 하는 노드의 개수가 나온다.",
+                "문제링크" : "https://atcoder.jp/contests/abc401/tasks/abc401_e", 
+                "코드링크" : "https://atcoder.jp/contests/abc401/submissions/64829562",
+                "대표이미지" : "abc_401_e.png"
+            },
+            {
+                "분류" : "기하",
+                "제목": "Line Crossing",
+                "문제": "주어진 원 위에 N 개의 균일한 간격의 점들이 있고 각각 번호를 1 ~ N 이라고 매긴다. 임의의 두 점을 잇는 M 개의 선분들간 교점의 개수를 구해야 한다." ,
+                "해법" : "각선분들의 기울기가 같은 것들이 몇개씩 있는지 계산하면 된다. 단 기울기가 얼마인지 알 필요는 없고 같은것 끼리 분류만 하면 되기 때문에 기하학적인 방버으로 계산할 수 있다." +
+                "\n 이를 테면 A 와 B 를 잇는 선분과 기울기가 같은 선분은 A+K , B-K 를 잇는 선분과 같다. 즉 A 와 B 의 합이 같으면 같은 기울기이다. 단 inedx 합이 N 을 넘어갈 경우 Mod 하면 된다.",
+                "문제링크" : "https://atcoder.jp/contests/abc402/tasks/abc402_d", 
+                "코드링크" : "https://atcoder.jp/contests/abc402/submissions/65045978",
+                "대표이미지" : "abc_402_d.png"
+
+            },
+            {
+                "분류" : "DP",
+                "제목": "조약돌",
+                "문제": "N 개의 조약돌 그룹이 있고 조약돌을 줍는 규칙은 크게 두가지가 있다. 1)인접한 두 지점에서 같은 개수의 조약돌을 주을 수 있다. 2) 한 장소에서 임의의 개수의 조약돌을 주을 수 있다." +
+                "\n 모든 조약들을 주을 수 있는 최소의 회수를 찾는 문제",
+                "해법" : "DP[i] 는 i 번째 까지 고려했을대 줄일수 있는 횟수의 최대값으로 정의할 수 있다. remain 은 인접한 두 조약돌 개수 중 j 번째 조약돌의 개수이고 j+1 번째의 remain = arr[j+1] - remain 으로 정의할 수 있다." +
+                "\n 0 ~ N 까지 모든 i 지점 부터 j (i+1 <= j < N) 에 대해 remain 이 0 이 되는 j 가 되면 줍는 횟수를 1회 단축 시킬 수 있다.",
+                "문제링크" : "https://www.acmicpc.net/problem/25378", 
+                "코드링크" : "https://www.acmicpc.net/source/93645040",
+                "대표이미지" : "bj_25378.png"
+
+            },
+            {
+                "분류" : "이진탐색",
+                "제목": "k 번째 수",
+                "문제": "N*N 크기의 이차원 배열에서 arr[i][j] = i*j 라고 했을때  arr 를 1차원으로 오름차순으로 정렬하여 k 번째가 무슨 값인지 구하는 문제",
+                "해법" : "결국 N*N 곱셈 표에서 k 번째로 작은 수를 구하는 문제 이다. 단 모든 인덱스는 1부터 시작한다." +
+                "\n 이 말을 다시 말하면 자기보다 작거나 같은 숫자의 개수가 K 이상인 가장 작은 값을 찾는 것이다. 1~N^2 의 값들을 이분 탐색하여 자기보다 작거나 같은 숫자의 개수가 k 개 이상인지 탐색하면 된다." +
+                "\n 곱셈표를 2차원 행렬로 생각한다면 각 행마다 mid 보다 작거나 같은 숫자의 개수를 빠르게 판단해야 한다. 결론 적으로 말하면 min(mid/i , N) 으로 표현 할 수 있다." +
+                "\n i * ? <= mid 이기때문에 ? <= mid/i 로 표현할 수 있다.",
+                "문제링크" : "https://www.acmicpc.net/problem/1300", 
+                "코드링크" : "https://www.acmicpc.net/source/93770607"
+            },
+            {
+                "분류" : "prefix sum, two pointer",
+                "제목": "Zid",
+                "문제": "N*N 크기의 이차원 배열에서 임의의 지점에 못이 박혀있고 임의의 사각형 구간에 못의 개수가 0개 또는 1개인 영역의 크기에서만 액자를 걸수 있다면 가능한 모든 경우는 몇개인지 찾는 문제",
+                "해법" : "R/C 가 500 으로 제한 되어있으므로 모든 행들의 구간에 대해서 C 의 위치를 슬라이딩 하면서 r - l + 1 을 업데이트 해 주면 된다. n^3 의 시간 복잡도를 가진다.",
+                "문제링크" : "https://www.acmicpc.net/problem/33773", 
+                "코드링크" : "https://www.acmicpc.net/source/94138512",
+                "대표이미지" : "bj_33773.png"
             }
+
+            {
+                "분류" : "해시를 사용한 집합과 맵",
+                "제목": "쌓기나무",
+                "문제": "최대 500 * 500 좌표에 블록을 쌓을 경우 정면, 측면, 위에서 관찰시 보이는 개수를 출력하는 문제",
+                "해법" : "위에서 개수 계산 : 좌표별로 map 을 정의하여 입력에 따라 개수를 증가 감소하면서 map 의 entry 개수가 곧 답이됨. 단 개수가 0 인 entry 는 제거해야 함." +
+                "\n 정면/측면 : 각 x축 y축별 쌓은 블록의 개수를 업데이트 하면서 제일 큰값의 변화를 판단하여 전체 값을 업데이트 하면 된다.", 
+                "문제링크" : "https://www.acmicpc.net/problem/33713", 
+                "코드링크" : "https://www.acmicpc.net/source/94216474"
+            }
+
         ];
 
         // 줄바꿈 문자를 <br> 태그로 변환하는 함수
