--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 "\n2) 제일 긴 노드를 Root 를 젭고 해당 노드에서 제일 긴 거리를 찾으면 그것이 곧 트리의 지름이 된다", 
                 "문제링크" : "https://atcoder.jp/contests/abc361/tasks/abc361_e", 
                 "코드링크" : "https://atcoder.jp/contests/abc361/submissions/55343394",
-                "대표이미지" : "abc361_f.png"
+                "대표이미지" : "images/abc361_f.png"
             },
             {
                 "제목": "G - Go Territory",
@@ -50,7 +50,7 @@
                 "\n2) -1,-1 이 있는 지점의 ID 와 같지 않은 영역들의 크기의 합을 계산하면 답이된다.", 
                 "문제링크" : "https://atcoder.jp/contests/abc361/tasks/abc361_g", 
                 "코드링크" : "아직못품",
-                "대표이미지" : "abc361_g.png"
+                "대표이미지" : "images/abc361_g.png"
             },
             {
                 "제목": "경찰차",
@@ -59,7 +59,7 @@
                 "\n2) 로 계산할 수 있다. 각 DP 값이 갱신될 때마다 어디서 이동했는지 기록한다.",
                 "문제링크" : "https://www.acmicpc.net/problem/2618", 
                 "코드링크" : "https://www.acmicpc.net/source/81325734",
-                "대표이미지" : "bj_2618.png"
+                "대표이미지" : "images/bj_2618.png"
             },
             {
                 "제목": "사전",
@@ -69,7 +69,7 @@
                 "\n2) 단 DP 테이블 값이 너무 커져서 오버플로우가 나면 비교에 문제가 생기기 때문에 K 의 범위보다 큰 값을 정의해서 해당 값이 넘어가지 않게 한다.",
                 "문제링크" : "https://www.acmicpc.net/problem/1256", 
                 "코드링크" : "https://www.acmicpc.net/source/81381697",
-                "대표이미지" : "bj_1256.png"
+                "대표이미지" : "images/bj_1256.png"
             },
             {
                 "제목": "로봇 조종하기",
@@ -80,7 +80,7 @@
                 "\nDP[i][j] = max(L[j], R[J]) 로 도출할 수 있다. ",
                 "문제링크" : "https://www.acmicpc.net/problem/2169", 
                 "코드링크" : "https://www.acmicpc.net/source/81392028",
-                "대표이미지" : "bj_2169.png"
+                "대표이미지" : "images/bj_2169.png"
             },
             {
                 "제목": "우수 마을",
@@ -91,7 +91,7 @@
                 "\n 최대값을 구하려면 사실 2번조건은 고려하지 않아도 됨. 왜냐하면 인접한 3개의 노드가 동시에 선택안될 경우는 없기 때문.",
                 "문제링크" : "https://www.acmicpc.net/problem/1949", 
                 "코드링크" : "https://www.acmicpc.net/source/81643593",
-                "대표이미지" : "bj_1949.png"
+                "대표이미지" : "images/bj_1949.png"
             },
             {
                 "제목": "트리의 독립집합",
@@ -114,7 +114,7 @@
             {
                 "제목": "다이아몬드 광산",
                 "문제": "맵에서 가장 큰 다이아 몬드를 찾는 문제",
-                "문제이미지" : "bj_1028.png",
+                "문제이미지" : "images/bj_1028.png",
                 "해법": "각점애서 좌하, 또는 우하로 이여지는 1의 개수가 몇개인지 DP 로 쌓은 후 부르트 포스로 최대 값을 구핼 수 있다." +
                 "\n단 DP 테이블을 만들때에는 아래에서 위로 스윕해야 한다.",
                 "문제링크" : "https://www.acmicpc.net/problem/1028", 
@@ -128,7 +128,7 @@
                 "\n뤼카의 정리 : N,R 을 P 진수로 표현할때 각자리수 별로 이항계수를 구하여 곱한 것과 통일하다.",
                 "문제링크" : "https://www.acmicpc.net/problem/11402", 
                 "코드링크" : "https://www.acmicpc.net/source/81760595",
-                "대표이미지" : "bj_11402.png",
+                "대표이미지" : "images/bj_11402.png",
                 "참고" : "그림의 괄호는 행렬이 아니라 이항계수를 의미함"
             },
             {
@@ -139,7 +139,7 @@
                 "\n비재귀로 풀려면 S 는 역순으로 순회해야 한다.",
                 "문제링크" : "https://www.acmicpc.net/problem/11402", 
                 "코드링크" : "https://www.acmicpc.net/source/81760595",
-                "대표이미지" : "bj_2449.png",
+                "대표이미지" : "images/bj_2449.png",
             },
             {
                 "분류" : "lazy segtree",
@@ -148,7 +148,7 @@
                 "해법": "Atcoder 의 Lazy Segtree 를 도입하여 업데이트및 Query 를 수행하면 된다.",
                 "문제링크" : "https://www.acmicpc.net/problem/10999", 
                 "코드링크" : "https://www.acmicpc.net/submit/10999/78148216",
-                "대표이미지" : "bj_10999.png",
+                "대표이미지" : "images/bj_10999.png",
             },
             {
                 "분류" : "Fanwick tree\n(폔윅트리)",
@@ -178,7 +178,7 @@
                 "\n i+1 번째 그림 탐색시작은 i 번째 까지 탐색한 시점부터 탐색하면 된다.",
                 "문제링크" : "https://www.acmicpc.net/problem/2515", 
                 "코드링크" : "https://www.acmicpc.net/source/81840975",
-                "대표이미지" : "bj_2515.png",
+                "대표이미지" : "images/bj_2515.png",
             },
             {
                 "분류" : "DP",
@@ -198,7 +198,7 @@
                 "\n knapsack DP 로 풀이할 수 있다.",
                 "문제링크" : "https://www.acmicpc.net/problem/12920", 
                 "코드링크" : "https://www.acmicpc.net/source/81849885",
-                "대표이미지" : "bj_12920.png",
+                "대표이미지" : "images/bj_12920.png",
             },
             {
                 "분류" : "meet in the middle",
@@ -255,20 +255,20 @@
                 "\n 각 비트별로 0 인경우 짝수 count 를 감소시키면서 홀수 카운트 만큼 결과에 반복 더해준다.",
                 "문제링크" : "https://www.acmicpc.net/problem/13710", 
                 "코드링크" : "https://www.acmicpc.net/source/82075352",
-                "대표이미지" : "bj_13710.png",
+                "대표이미지" : "images/bj_13710.png",
             },
             {
                 "분류" : "DP",
                 "제목": "방법을 출력하지 않는 숫자 맞추기",
                 "문제": "N 개의 나사가 쌓여있고 왼쪽으로 돌리면 아래의 모든 나사들이 같이돌아가고 오른쪽으로만 돌리면 현재 나사만 돌아간다." +
                 "\n 시작숫자에서 끝숫자 까지 이르는데 나사를 돌리는 최소 횟수를 구해야 함.",
-                "문제이미지" : "bj_13392.png",
+                "문제이미지" : "images/bj_13392.png",
                 "해법": "i 번째 나사기준으로 왼쪽으로 몇번 돌았을때 N번째 까지 모두 맞추는데 얼마나 걸리는지 계산하는 table 을정의한다" +
                 "\n DP[i][왼쪽 돌아간 횟수] = min(DP[i+1][i번째를 맞추기 위해 돌려야할 왼쪽회전수] + 회전수를 달성하기 위한 추가 왼쪽 회전수, " +
                 "\n DP[i+1][왼쪽 돌아간횟수] + 회전수를 달성하기 위한 추가 오른쪽 회전수)", 
                 "문제링크" : "https://www.acmicpc.net/problem/13392", 
                 "코드링크" : "https://www.acmicpc.net/source/82233795",
-                "대표이미지" : "bj_13392_2.png",
+                "대표이미지" : "images/bj_13392_2.png",
             },
             {
                 "분류" : "DP",
@@ -286,7 +286,7 @@
                 "\n 단 최초 가상의 벽을 만들고 DP[0][7] 만 1로 채운다. 왜냐하면 첫번째 줄은 이전 줄을 침범하여 벽돌을 쌓을 수 없기 때문이다",
                 "문제링크" : "https://www.acmicpc.net/problem/2133", 
                 "코드링크" : "https://www.acmicpc.net/source/82260641",
-                "대표이미지" : "bj_2133.png",
+                "대표이미지" : "images/bj_2133.png",
             },
             {
                 "분류" : "DP",
@@ -296,30 +296,30 @@
                 "\n 매 백단위 마다 1, 10,25 짜리 동전으로 가정할 수 있기 때문에 0~99 까지 만들수 있는 최소 동전을 만들고 2자리 단위로 끊어서 더하면 됨.",
                 "문제링크" : "https://www.acmicpc.net/problem/1398", 
                 "코드링크" : "https://www.acmicpc.net/source/82505436",
-                "대표이미지" : "bj_1398.png",
+                "대표이미지" : "images/bj_1398.png",
             },
             {
                 "분류" : "DP",
                 "제목": "교차하지 않는 원의 현들의 최대 집합",
                 "문제": "원위의 N 개의 현들중 교차하지 않는 현들의 최대 개수를 구하는 문제",
-                "문제이미지" :  "bj_2673.png",
+                "문제이미지" :  "images/bj_2673.png",
                 "해법": "원을 직선으로 펼쳐도 동일한 계산 결과가 나온다는 것이 핵심. DP[i][j] = i~j 까지를 가지고 만들수 있는 최대 현의 개수로 정의" +
                 "\n DP[i][j] = max(DP[i][k] + DP[k][j]) , k 는 i~j",
                 "문제링크" : "https://www.acmicpc.net/problem/2673", 
                 "코드링크" : "https://www.acmicpc.net/source/82596905",
-                "대표이미지" : "bj_2673_1.png",
+                "대표이미지" : "images/bj_2673_1.png",
             },
             {
                 "분류" : "DP",
                 "제목": "기지국",
                 "문제": "좌표위에 모든 건물을 포함하는 최소 기지국의 길이를 구하는 문제.기지국의 크기는 항상 정사각형이다",
-                "문제이미지" :  "bj_2300.png",
+                "문제이미지" :  "images/bj_2300.png",
                 "해법": "DP[i] 는 i 번째까지의 최소 길이로 정의 하면" +
                 "\n DP[i] = min(DP[k] + K+1 ~ i 까지 하나로 묵을 수있는 최소 길이) 단 K 는 0~i 의 범위임." +
                 "\n N 의 제약이 최대 10000 일경우 로직이 복잡하지 않으면 N^2 알고리즘이 시간내에 돌 수 있다.",
                 "문제링크" : "https://www.acmicpc.net/problem/2300", 
                 "코드링크" : "https://www.acmicpc.net/source/82604359",
-                "대표이미지" : "bj_2300_1.png",
+                "대표이미지" : "images/bj_2300_1.png",
             },
             {
                 "분류" : "Daikstra DP",
@@ -336,13 +336,13 @@
                 "분류" : "누적합",
                 "제목": "Pedometer",
                 "문제": "원형의 길에 놓여있는 휴계소를 시계방향으로만 이동이 가능할때 모든 위치 쌍들의 이동거리중 M 의 배수가 되는 쌍의 개수를 구하는 문제",
-                "문제이미지" :  "abc_367_d_2.png",
+                "문제이미지" :  "images/abc_367_d_2.png",
                 "해법": "나열된 거리들의 누적합테이블을 만든다.(0 포함)." +
                 "\n 1) 누적합 r 번째 S[R] 에대해 M 으로 나눈 나머지가 같은 S[L] (L 은 0 부터 R-1) 의 개수를 구한다. a-> b 로 이동(a<b) 케이스" +
                 "\n 2) 전체 이동 길이를 L 이라 했을 때 L-S[R] 에 대해 M 으로 나눈 나머지가 같은 S[L] 도 추가로 구하여 더한다. b->a 로 이동케이스",
                 "문제링크" : "https://atcoder.jp/contests/abc367/tasks/abc367_d", 
                 "코드링크" : "https://atcoder.jp/contests/abc367/submissions/56868157",
-                "대표이미지" : "abc_367_d.png"
+                "대표이미지" : "images/abc_367_d.png"
             },
             {
                 "분류" : "DP",
@@ -352,21 +352,21 @@
                 "\n 재배치 함수를 2^T 번 수행하였을때 함수를 DP Table 로 만든 후 K 를 각 비트자리가 1인 부분을 찾아서 변환함수를 합셩하면 된다.", 
                 "문제링크" : "https://atcoder.jp/contests/abc367/tasks/abc367_e", 
                 "코드링크" : "https://atcoder.jp/contests/abc367/submissions/56899595",
-                "대표이미지" : "abc_367_e.png"
+                "대표이미지" : "images/abc_367_e.png"
             },
             {
                 "분류" : "누적합 + DP",
                 "제목": "게임판",
                 "문제": "전체 게임판을 정해진 크기의 SubWindow 를 왼쪽 상단에서 오른쪽 하단까지 슬라이딩 하면서 " + 
                 "각 윈도우의 1,2 로마킹된 위치와 중앙 위치의 거리의 합의 차이가 최소가 얼마인지 구하는 문제",
-                "문제이미지" :  "bj_29892_2.png",
+                "문제이미지" :  "images/bj_29892_2.png",
                 "해법" : "1 by SubWin sz 의 배열의 합을 계산한다고 생각해보면 DP[i][j][k] 는 i,j 의 배열이 중심점이 K 인 지점과 거리의 함으로 정의한다. " +
                 "\n 계산을 줄이기 위해서 DP[i+1][j][k] 는 DP[i][j][k] 를 참조하여 업데이트 해 주어야 하는데 이때 전체윈도우의 각 열별로 각 그룹별 숫자의 개수를" +
                 "\n 누적합으로 미리계산해야 한다. data[i][j] 의 값만큼 뻬주고, data[i+sz][j] 값만큼 더해주고 중간은 반으로 나누어 위는 개수만큼 더해주고" + 
                 "\n 아래는 개수만큼 뻬주어야 한다.", 
                 "문제링크" : "https://www.acmicpc.net/problem/29892", 
                 "코드링크" : "https://www.acmicpc.net/source/82932354",
-                "대표이미지" : "bj_29892.png"
+                "대표이미지" : "images/bj_29892.png"
             },
 
             {
@@ -383,7 +383,7 @@
                 "분류" : "우선순위큐, DP",
                 "제목": "데이터 분석",
                 "문제": "2차원 좌표에 여러 점들이 있고 가로선을 서로 겹치지 않게 그었을때 점과 선사이의 거리가 최소가 되는 값을 구하는 문제", 
-                "문제이미지" :  "bj_29893.png",
+                "문제이미지" :  "images/bj_29893.png",
                 "해법" : "점들을 X 좌표 기준으로 정렬하여 어떻게 그룹핑하면 최적화가 될지 찾아야 하는문제. 각 그룹은 선분이 그룹의 중앙값에 위치해야함" +
                 "\n 중앙값은 각그룹에서 X 순으로 정렬했을때 중간번째 좌표의 값으로 삼으면 됨." +
                 "\n 정렬후 1~k 까지의 최소값은 다음과 같이 구할 수 있다." +
@@ -405,7 +405,7 @@
                 "분류" : "다익스트라 DP, Greedy",
                 "제목": "현대모비스 트럭 군집주행",
                 "문제": "도로에서 한지점에서 출발하여 각 지점까지의 거리의 합이 최소가 되는 값을 구해야 한다. 단 선두차량을 뒤따라 갈경우 10% 비용이 절감된다.", 
-                "문제이미지" : "bj_31938.png",
+                "문제이미지" : "images/bj_31938.png",
                 "해법" : "다익스트라 DP 를 통해 모든 거리의 합을 구할 수 있다. 이때 모든 차량은 선두로 가지 않는다고 가정한다" +
                 "\n 모든 도작치점으로 도착하는 마지막 길이 선두로 가는 길이라 가정하고 각 도착지점마다 마지막 Edge 를 감안하여 더해주면된다." +
                 "\n 그러나 여기에 함정이 있는게 임의이 지점으로 들어오는 경로의 길이가 같은게 두가지 이상일 수 있다는 것이다. 이때에는 마지막 경로의 길이가" +
@@ -420,7 +420,7 @@
                 "해법" : "DP[i][1] i-1 번째까 묶였을때의 최대값, DP[i][0] : i-1 번째가 묶이지 않았을때의 최대값",
                 "문제링크" : "https://www.acmicpc.net/problem/31838", 
                 "코드링크" : "https://www.acmicpc.net/source/83979723",
-                "대표이미지" : "bj_31838.png"
+                "대표이미지" : "images/bj_31838.png"
             },
             {
                 "분류" : "누적합, 투포인터",
@@ -465,7 +465,7 @@
                 "\n 할 수 있고 정렬된 순서로 DP[i] = DP[All child] + 1 로 계산할 수 있다.",
                 "문제링크" : "https://www.acmicpc.net/problem/31445", 
                 "코드링크" : "https://www.acmicpc.net/source/83946517",
-                "대표이미지" : "bj_31445.png"
+                "대표이미지" : "images/bj_31445.png"
             },
             {
                 "분류" : "DP",
@@ -490,7 +490,7 @@
                 "\n 즉 만약 i = 4 이라면 현재노드의 16번째 조상은, 8번째 조상의 8번째 조상이라는 원리이다.",
                 "문제링크" : "https://www.acmicpc.net/problem/3176", 
                 "코드링크" : "https://www.acmicpc.net/source/84107642",
-                "대표이미지" : "bj_3176.png"
+                "대표이미지" : "images/bj_3176.png"
             },
             {
                 "분류" : "stack",
@@ -501,7 +501,7 @@
                 "\n 뒤에서 부터 순회하면서 stack top 보다 현재 빌딩이 더 높으면 stack 을 pop 하며 monotonic 을 유지하며 stack 의 크기를 계산해서 출력하면된다.",
                 "문제링크" : "https://atcoder.jp/contests/abc372/tasks/abc372_d", 
                 "코드링크" : "https://atcoder.jp/contests/abc372/submissions/58061510",
-                "대표이미지" : "abc372_d.png"
+                "대표이미지" : "images/abc372_d.png"
             },
             {
                 "분류" : "union-find",
@@ -531,7 +531,7 @@
                 "\n k 번재 사윈의 칭찬값은 1~ K 번째 사원의 진입번호 까지의 총합이고 이는 Fanwick Tree 로 구현할 수 있다.",
                 "문제링크" : "https://www.acmicpc.net/problem/14268", 
                 "코드링크" : "https://www.acmicpc.net/source/84687277",
-                "대표이미지" : "bj_14268.png"
+                "대표이미지" : "images/bj_14268.png"
             },
             {
                 "분류" : "오일러 경로 테크닉",
@@ -552,7 +552,7 @@
                 "\n 최종답은 DP[H-1][W-1] / 2 가 된다. 색이 2번 반전되는 것은 검은색 그룹이 1개라는 뜻이기 때문.",
                 "문제링크" : "https://atcoder.jp/contests/agc043/tasks/agc043_a", 
                 "코드링크" : "https://atcoder.jp/contests/agc043/submissions/58516066",
-                "대표이미지" : "agc043_a.png"
+                "대표이미지" : "images/agc043_a.png"
             },
             {
                 "분류" : "DP",
@@ -605,7 +605,7 @@
                 "\n S는 cycle 의 크기이다.",
                 "문제링크" : "https://codeforces.com/contest/2033/problem/E", 
                 "코드링크" : "https://codeforces.com/contest/2033/submission/288058940",
-                "대표이미지" : "force_2033_E.png"
+                "대표이미지" : "images/force_2033_E.png"
             },
             {
                 "분류" : "union find, 그리디, 그래프 이론",
@@ -618,7 +618,7 @@
                 "\n 방향그래프를 구성하는 노드들의 indegree 가 0 인게 2개 이상일 경우 결과를 만들 수 없다. 그리고 방향그래프의 노드 개수 + 1 이 이동횟수이다.",
                 "문제링크" : "https://www.acmicpc.net/problem/32070", 
                 "코드링크" : "https://www.acmicpc.net/source/86124674",
-                "대표이미지" : "bj_32070.png"
+                "대표이미지" : "images/bj_32070.png"
             },
             {
                 "분류" : "우선순위큐",
@@ -629,7 +629,7 @@
                 "\n 1) 우선 순위 큐를 이용하여 뽑을 대상이 되는 노드들을 잘 관리하고 매번 뽑을 때 마다 뽑은 노드의 자식들을 큐에 넣어 주면 된다",
                 "문제링크" : "https://www.acmicpc.net/problem/32072", 
                 "코드링크" : "https://www.acmicpc.net/source/86200470",
-                "대표이미지" : "bj_32072.png"
+                "대표이미지" : "images/bj_32072.png"
             },
             {
                 "분류" : "누적합, FanWickTree",
@@ -664,7 +664,7 @@
                 "\n 크거나 같을 경우 현재 노드는 단절점이다. 현재노드를 방문하지 않고 갈 수없는 자식 노드가 있다는 뜻." ,
                 "문제링크" : "https://www.acmicpc.net/problem/11266", 
                 "코드링크" : "https://www.acmicpc.net/source/87410851",
-                "대표이미지" : "bj_11266.png"
+                "대표이미지" : "images/bj_11266.png"
             },
             {
                 "분류" : "SCC",
@@ -704,7 +704,7 @@
                 "\n 각 종료 지점들을 순회하면서 시작점-해당 종료지점의 차이가 길이보다 작거나 같은 것들의 갯수를 세면 된다.",
                 "문제링크" : "https://www.acmicpc.net/problem/13334", 
                 "코드링크" : "https://www.acmicpc.net/source/88085888",
-                "대표이미지" : "bj_13334.png"
+                "대표이미지" : "images/bj_13334.png"
             },
             {
                 "분류" : "DP, 누적합",
@@ -715,7 +715,7 @@
                 "\n DP[i][j][1] : DP[i][j] 를 기반으로 DP[i-1][j] 또는 DP[i][j+1] 의 값을 업데이트 해 주면 된다 ",
                 "문제링크" : "https://www.acmicpc.net/problem/2315", 
                 "코드링크" : "https://www.acmicpc.net/source/89160331",
-                "대표이미지" : "bj_2315.png",
+                "대표이미지" : "images/bj_2315.png",
                 "기타" : "2/19 스터디 문제"
             },
             {
@@ -727,7 +727,7 @@
                 "\n i-1 번째 돌들이 k 개의 그룹으로 나누어져 있다면 i 번재 돌을 각 그룹에 포함되거나 새로운 그룹에 포함되는 경우를 가지고 DFS 로 계산할 수 있다.",
                 "문제링크" : "https://atcoder.jp/contests/abc390/tasks/abc390_d", 
                 "코드링크" : "https://atcoder.jp/contests/abc390/submissions/62199934",
-                "대표이미지" : "abc_390_d.png",
+                "대표이미지" : "images/abc_390_d.png",
                 "기타" : "2/19 스터디 문제"
             },
             {
@@ -952,7 +952,7 @@
                 "\n 모든 i 에 대해 small 에서 i 와 연결된 노드의 개수가 i 와 다르다면 -1 , 그외에는 large 의 i 와연결된 노드들의 개수 에서 i 만큼 뻬면 나머지는 삭제해야 하는 노드의 개수가 나온다.",
                 "문제링크" : "https://atcoder.jp/contests/abc401/tasks/abc401_e", 
                 "코드링크" : "https://atcoder.jp/contests/abc401/submissions/64829562",
-                "대표이미지" : "abc_401_e.png"
+                "대표이미지" : "images/abc_401_e.png"
             },
             {
                 "분류" : "기하",
@@ -962,7 +962,7 @@
                 "\n 이를 테면 A 와 B 를 잇는 선분과 기울기가 같은 선분은 A+K , B-K 를 잇는 선분과 같다. 즉 A 와 B 의 합이 같으면 같은 기울기이다. 단 inedx 합이 N 을 넘어갈 경우 Mod 하면 된다.",
                 "문제링크" : "https://atcoder.jp/contests/abc402/tasks/abc402_d", 
                 "코드링크" : "https://atcoder.jp/contests/abc402/submissions/65045978",
-                "대표이미지" : "abc_402_d.png"
+                "대표이미지" : "images/abc_402_d.png"
 
             },
             {
@@ -974,7 +974,7 @@
                 "\n 0 ~ N 까지 모든 i 지점 부터 j (i+1 <= j < N) 에 대해 remain 이 0 이 되는 j 가 되면 줍는 횟수를 1회 단축 시킬 수 있다.",
                 "문제링크" : "https://www.acmicpc.net/problem/25378", 
                 "코드링크" : "https://www.acmicpc.net/source/93645040",
-                "대표이미지" : "bj_25378.png"
+                "대표이미지" : "images/bj_25378.png"
 
             },
             {
@@ -995,9 +995,8 @@
                 "해법" : "R/C 가 500 으로 제한 되어있으므로 모든 행들의 구간에 대해서 C 의 위치를 슬라이딩 하면서 r - l + 1 을 업데이트 해 주면 된다. n^3 의 시간 복잡도를 가진다.",
                 "문제링크" : "https://www.acmicpc.net/problem/33773", 
                 "코드링크" : "https://www.acmicpc.net/source/94138512",
-                "대표이미지" : "bj_33773.png"
-            }
-
+                "대표이미지" : "images/bj_33773.png"
+            },
             {
                 "분류" : "해시를 사용한 집합과 맵",
                 "제목": "쌓기나무",
